[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mediguard-ai"
version = "0.1.0"
description = "MediGuard-AI: A medical RL environment for OpenEnv"
requires-python = ">=3.11"
authors = [{ name = "SutikshanUpman" }]
dependencies = [
    "numpy>=1.26",
    "pydantic",
    "openai",
    "gradio",
    "pyyaml",
    "setuptools",
    "wheel",
    "ffmpeg-python",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
